Truncate long filname before creating a link

Summary:
URL of a website can exceed 255 characters. Consequently we cannot create a link to such URL.
In such cases try to truncate the filename to 255 characters.

BUG: 342247

Reviewers: dfaure, ngraham

Reviewed By: dfaure, ngraham

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D21155